Fix Eigen Decomposition QR algorithm & ND4J benchmark stall